fix grid spacing for larger screens

--- a/assets/less/filter.less
+++ b/assets/less/filter.less
@@ -2,12 +2,10 @@
 
 .filter-components{
     display:inline-block;
-    width: 220px;
     min-height: 475px;
     background: #EAEEF1;
     padding: 10px;
     padding-top: 0px;
-    margin-left: 10px;
     border-radius: 5px;
     border: 2px solid gray;
     border-radius: 5px;
