--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -33,10 +33,6 @@
                 height: 30px;
             }
 
-            thead th:not(:last-child){
-                width: 169px;
-            }
-
             thead th:last-child{
                 width: 81px;
             }
@@ -49,7 +45,7 @@
                     border-right: @border;   
 
                     * {
-                        width: 160px;
+                        width: 150px;
                     }
 
                     .awesomplete {
